[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/Sub.png" type="Texture" id=1]
[ext_resource path="res://Common/Instances/Entities/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/dirline.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/bubble.png" type="Texture" id=4]
[ext_resource path="res://Assets/Audio/ContinuousBubbles1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/BubbleJet.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/Crash.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/Bounce1.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 117.0
gravity = Vector3( 0, -200, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity = 5.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 2.0
scale_random = 1.0

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, -200, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
angular_velocity = 5.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
angle = 45.0
scale = 2.0
scale_random = 1.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="GroundRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 48 )

[node name="DirectionIndicatorPivot" type="Node2D" parent="."]

[node name="DirectionIndicator" type="Sprite" parent="DirectionIndicatorPivot"]
position = Vector2( -2, 32 )
texture = ExtResource( 3 )
centered = false

[node name="BubblesSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.4
autoplay = true

[node name="BubbleJetSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 0.8

[node name="CrashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 4.0
pitch_scale = 0.8

[node name="BounceSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0
pitch_scale = 0.5

[node name="BubbleUpwards" type="Particles2D" parent="."]
position = Vector2( 0, -38 )
emitting = false
amount = 50
lifetime = 10.0
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="BubbleJetPivot" type="Node2D" parent="."]

[node name="BubbleJet" type="Particles2D" parent="BubbleJetPivot"]
position = Vector2( 0, -38 )
emitting = false
amount = 80
lifetime = 0.5
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
randomness = 1.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="BubbleJet2" type="Particles2D" parent="BubbleJetPivot"]
position = Vector2( 0, -38 )
emitting = false
amount = 80
lifetime = 0.5
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
randomness = 1.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 4 )
